--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,14 @@
-name: Deploy to GCP (Keyless)
+name: WIF Test
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
-  deploy:
-    permissions:
-      id-token: write
-      contents: read
-
+  auth-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,15 +16,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Authenticate to Google Cloud
+        id: auth
         uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: "projects/619930646601/locations/global/workloadIdentityPools/github-pool/providers/github-provider"
           service_account: "github-deployer@shailaja-477403.iam.gserviceaccount.com"
+          create_credentials_file: true
 
-      - name: Set up gcloud
-        uses: google-github-actions/setup-gcloud@v2
-
-      - name: Deploy
+      - name: Test gcloud
         run: |
-          gcloud info
-          echo "Authenticated successfully!"
+          gcloud auth list
+          gcloud projects list --limit=5
